docs: fix `-webkit-tap-highlight-color` on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -2,8 +2,8 @@
   .content:not(.custom) {
     max-width: calc(100vw - 25rem) !important;
   }
-  .page-edit,
-  .page-nav {
+
+  .page-edit, .page-nav {
     max-width: calc(100vw - 25rem) !important;
   }
 }
@@ -16,4 +16,8 @@
 
 h3, p {
   line-height: 2 !important;
+}
+
+html, body {
+  -webkit-tap-highlight-color: transparent;
 }
